# softorks.eu

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
fixtures/: references.json
notebook/: issues.ipynb
softorks/: .env.template  gunicorn.conf.py.template  issues.ipynb  manage.py  mypy.ini
softorks/activities/: admin.py  models.py  urls.py
softorks/activities/migrations/: 0001_initial.py
softorks/fixtures/: activities.json
softorks/locale/cs/LC_MESSAGES/: django.po
softorks/locale/en/LC_MESSAGES/: django.po
softorks/references/: admin.py  models.py  translation.py  urls.py
softorks/references/migrations/: 0001_initial.py  0002_reference_description_cs_reference_description_en_and_more.py
softorks/references/templatetags/: markdown.py
softorks/softorks/: asgi.py  core.py  locale.py  settings.py  urls.py  wsgi.py
softorks/static/js/: babel.min.js  matrix.js
softorks/stubs/: markdown.pyi
softorks/templates/: index.html
softorks/templates/activities/: github_items.html
softorks/templates/admin/references/reference/: change_form.html
softorks/templates/references/: github_items.html
softorks/www/: core.py  settings.py  urls.py
www/: .env.template  README.md  setup.py
www/locale/cs/LC_MESSAGES/: django.mo  django.po
www/locale/en/LC_MESSAGES/: django.mo  django.po
www/templates/: index.html  security.txt
www/www/: locale.py  settings.py  urls.py
